# brpcs_heur_exact

./: README.md  cmake_script_exact.sh  cmake_script_heur.sh  make_slurm_script_CN_test_CS.sh  make_slurm_script_CN_test_CS_MaxDist.sh  make_slurm_script_CN_test_SW.sh  make_slurm_script_CN_test_SW_MaxDist.sh  make_slurm_script_RT_test_CS.sh  make_slurm_script_RT_test_SW.sh  run_exec.sh  run_gen.sh  run_heur.sh
generator/: CheckMaxDistance.h  FileSystemIO.h  Load.h  MakeFeasible.h  MakeFeasibleSW.h  MakeUncharged.h  MakeUnchargedSW.h  Parameters.h  PrintInstance.h  RoundToNearestTenth.h  Station.h  StoreDepot.h  gen  main.cpp
instances/: antwerp819_20.txt  antwerp829_20_CS.txt  antwerp829_20_SW.txt  barcelona519_20.txt  barcelona531_20_CS.txt  barcelona531_20_SW.txt  boston543_20.txt  boston553_20_CS.txt  boston553_20_SW.txt  bruxelles344_20_CS.txt  bruxelles344_20_SW.txt  bruxelles346_20.txt  chicago1834_20.txt  chicago1842_20_CS.txt  chicago1842_20_SW.txt  madrid606_20_CS.txt  madrid606_20_SW.txt  madrid625_20.txt  mexicocity678_20.txt  mexicocity678_20_CS.txt  montreal958_20.txt  montreal966_20_CS.txt  newyork2235_20.txt  newyork2237_20_CS.txt  newyork2237_20_SW.txt  paris1452_20_CS.txt  paris1452_20_SW.txt  paris1473_20.txt  quebec10_20_CS.txt  quebec166_20.txt  quebec167_20_CS.txt  quebec167_20_SW.txt  quebec5_20_CS.txt  rio403_20_CS.txt  rio409_20.txt  sanfrancisco571_20.txt  sanfrancisco585_20_CS.txt  toronto885_20.txt  toronto914_20_CS.txt  toronto914_20_SW.txt  (+2 more)
results/: exact.csv  full.csv  results_brpcs.csv  srlComparison.csv  tunningCN.csv  tunningCS.csv
src_exact/: CMakeLists.txt  ExactBrpcs.cpp  ExactBrpcs.h  ExactBrpcsCallBacks.cpp  ExactBrpcsCallBacks.h  ExactBrpcsGraph.cpp  ExactBrpcsGraph.h  ExactBrpcsSepBase.h  ExactBrpcsSepUser.cpp  ExactBrpcsSepUser.h  Makefile  main_ex_brpcs.cpp
src_heur/: AlnsBRPCS.cpp  AlnsBRPCS.h  AlnsOutils.cpp  AlnsOutils.h  BestSolutionList.h  CMakeLists.txt  CostFunctionBRPCS.cpp  CostFunctionBRPCS.h  DriverBRPCS.h  InsRmvMethodBRPCS.cpp  InsRmvMethodBRPCS.h  LoadBRPCS.cpp  LoadBRPCS.h  Makefile  MoveBRPCS.h  NodeBRPCS.h  Parameters.cpp  Parameters.h  PathHashTable.h  ProblemDefinition.h  RegretInsertionBRPCS.cpp  RegretInsertionBRPCS.h  RegretInsertionBRPCS_Old.cpp  RelatednessRemoveBRPCS.cpp  RelatednessRemoveBRPCS.h  RemoveRandomBRPCS.cpp  RemoveRandomBRPCS.h  RouteFeasibilityBRPCS.cpp  RouteFeasibilityBRPCS.h  SequentialInsertionBRPCS.cpp  SequentialInsertionBRPCS.h  SequentialInsertionBRPCS_Old.cpp  Solution.h  SteepestDescentInsertionBRPCS.cpp  SteepestDescentInsertionBRPCS.h  constants.h  main_heur_brpcs.cpp  main_test_CN.cpp  main_test_RT.cpp  primes.c  (+1 more)
